objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Muleto</fullName>
        <description>Proceso específico para los casos de Entrega/Devolución de Muletos</description>
        <isActive>true</isActive>
        <values>
            <fullName>Devolución con falla</fullName>
        </values>
        <values>
            <fullName>Devolución destrucción total</fullName>
        </values>
        <values>
            <fullName>Devolución exitosa</fullName>
        </values>
        <values>
            <fullName>Nueva</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pendiente de retiro</fullName>
        </values>
        <values>
            <fullName>Sin devolución</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Portability</fullName>
        <description>Support Process for Portability</description>
        <isActive>true</isActive>
        <values>
            <fullName>Aprobada Pendiente de Portación</fullName>
        </values>
        <values>
            <fullName>Nueva</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rechazada</fullName>
        </values>
        <values>
            <fullName>Rechazada Pendiente ABD</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Postsales</fullName>
        <description>Support process to handled the cases reported as part of the post sales processes</description>
        <isActive>true</isActive>
        <values>
            <fullName>Anulada</fullName>
        </values>
        <values>
            <fullName>Derivada</fullName>
        </values>
        <values>
            <fullName>En autorización</fullName>
        </values>
        <values>
            <fullName>En espera de ejecución</fullName>
        </values>
        <values>
            <fullName>En espera del cliente</fullName>
        </values>
        <values>
            <fullName>En verificación</fullName>
        </values>
        <values>
            <fullName>Informada</fullName>
        </values>
        <values>
            <fullName>No se pudo realizar</fullName>
        </values>
        <values>
            <fullName>Nueva</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pendiente de contacto</fullName>
        </values>
        <values>
            <fullName>Pendiente evento masivo</fullName>
        </values>
        <values>
            <fullName>Realizada exitosa</fullName>
        </values>
        <values>
            <fullName>Resuelta Masiva</fullName>
        </values>
        <values>
            <fullName>Resuelta exitosa</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales</fullName>
        <description>Support process to handled the cases reported by Sales</description>
        <isActive>true</isActive>
        <values>
            <fullName>Anulada</fullName>
        </values>
        <values>
            <fullName>Derivada</fullName>
        </values>
        <values>
            <fullName>En autorización</fullName>
        </values>
        <values>
            <fullName>En espera de ejecución</fullName>
        </values>
        <values>
            <fullName>En espera del cliente</fullName>
        </values>
        <values>
            <fullName>Envío en curso</fullName>
        </values>
        <values>
            <fullName>No se pudo realizar</fullName>
        </values>
        <values>
            <fullName>Nueva</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pagada</fullName>
        </values>
        <values>
            <fullName>Pendiente de contacto</fullName>
        </values>
        <values>
            <fullName>Pendiente de retiro</fullName>
        </values>
        <values>
            <fullName>Pendiente evento masivo</fullName>
        </values>
        <values>
            <fullName>Realizada exitosa</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Tech Care</fullName>
        <description>Support process to handled the cases reported as part of the tech care processes</description>
        <isActive>true</isActive>
        <values>
            <fullName>Anulada</fullName>
        </values>
        <values>
            <fullName>Derivada</fullName>
        </values>
        <values>
            <fullName>En autorización</fullName>
        </values>
        <values>
            <fullName>En espera de ejecución</fullName>
        </values>
        <values>
            <fullName>En espera del cliente</fullName>
        </values>
        <values>
            <fullName>En presupuestación</fullName>
        </values>
        <values>
            <fullName>En verificación</fullName>
        </values>
        <values>
            <fullName>Envío en curso</fullName>
        </values>
        <values>
            <fullName>Expirada</fullName>
        </values>
        <values>
            <fullName>Informada</fullName>
        </values>
        <values>
            <fullName>Migrada</fullName>
        </values>
        <values>
            <fullName>Nueva</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pagada</fullName>
        </values>
        <values>
            <fullName>Pendiente de Envío</fullName>
        </values>
        <values>
            <fullName>Pendiente de contacto</fullName>
        </values>
        <values>
            <fullName>Pendiente de retiro</fullName>
        </values>
        <values>
            <fullName>Pendiente evento masivo</fullName>
        </values>
        <values>
            <fullName>Resuelta Masiva</fullName>
        </values>
        <values>
            <fullName>Resuelta exitosa</fullName>
        </values>
        <values>
            <fullName>Retenida</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vlocity_cmt__Billing</fullName>
        <description>There is a complaint about billing. This has to do with money.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Informada</fullName>
        </values>
        <values>
            <fullName>Nueva</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pendiente de retiro</fullName>
        </values>
        <values>
            <fullName>Pendiente evento masivo</fullName>
        </values>
        <values>
            <fullName>Resuelta Masiva</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vlocity_cmt__Service Problem</fullName>
        <description>There is something wrong with the service. This does not include Billing issues.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Expirada</fullName>
        </values>
        <values>
            <fullName>Nueva</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vlocity_cmt__Vlocity Support Process</fullName>
        <description>Vlocity Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Anulada</fullName>
        </values>
        <values>
            <fullName>Aprobada revisor</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Derivada</fullName>
        </values>
        <values>
            <fullName>Devolución</fullName>
        </values>
        <values>
            <fullName>Devolución con falla</fullName>
        </values>
        <values>
            <fullName>Devolución destrucción total</fullName>
        </values>
        <values>
            <fullName>Devolución exitosa</fullName>
        </values>
        <values>
            <fullName>En autorización</fullName>
        </values>
        <values>
            <fullName>En espera de ejecución</fullName>
        </values>
        <values>
            <fullName>En espera del cliente</fullName>
        </values>
        <values>
            <fullName>En presupuestación</fullName>
        </values>
        <values>
            <fullName>En verificación</fullName>
        </values>
        <values>
            <fullName>Envío en curso</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Expirada</fullName>
        </values>
        <values>
            <fullName>Informada</fullName>
        </values>
        <values>
            <fullName>No se pudo realizar</fullName>
        </values>
        <values>
            <fullName>Nueva</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pagada</fullName>
        </values>
        <values>
            <fullName>Pendiente de contacto</fullName>
        </values>
        <values>
            <fullName>Pendiente de retiro</fullName>
        </values>
        <values>
            <fullName>Pendiente evento masivo</fullName>
        </values>
        <values>
            <fullName>Realizada exitosa</fullName>
        </values>
        <values>
            <fullName>Resuelta Masiva</fullName>
        </values>
        <values>
            <fullName>Resuelta exitosa</fullName>
        </values>
        <values>
            <fullName>Sin devolución</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AdjustmentRootCause__c</fullName>
        <description>Se utiliza para indicar la causa raiz del ajuste , si se refiere a un problema con facturación , tasación o marketing por lo cual se genera el ajuste</description>
        <label>AdjustmentRootCause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No aplica</fullName>
                </value>
                <value>
                    <fullName>Facturacion</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Tasacion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AffectedCasesAmount__c</fullName>
        <description>Campo utilizado para indicar la cantidad de casos  asociados a un caso (root) de incidentes masivos</description>
        <label>AffectedCasesAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AffectedCustomer__c</fullName>
        <description>Campo Utilizado para indicar al momento de la creación de incidentes masivos de forma manual las areas o clientes afectados por el incidente</description>
        <label>Affected Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Refunds__c</fullName>
        <description>Campo para reflejar el monto de reintegro</description>
        <label>Monto Reintegro</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver Case</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>Creado por historia de usuario PFTA-86 Sprint 3 de Care</description>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Modificación</fullName>
                </value>
                <value>
                    <fullName>Diagnóstico</fullName>
                </value>
                <value>
                    <fullName>ASOL</fullName>
                </value>
                <value>
                    <fullName>AREC</fullName>
                </value>
                <value>
                    <fullName>AACE</fullName>
                </value>
                <value>
                    <fullName>ACON</fullName>
                </value>
                <value>
                    <fullName>APOR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attibute_Assigment_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute Assignment</label>
        <referenceTo>vlocity_cmt__AttributeAssignment__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available_Quota__c</fullName>
        <label>Cuota Disponible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Board_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cambio de Placa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBU_Alias_Refunds__c</fullName>
        <label>CBU - Alias</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CantidadAjuste__c</fullName>
        <description>Este campo es necesario para guardar en el caso la cantidad (monto en peso, tiempo, Megas) en base a la unidad seleccionada</description>
        <label>Cantidad Ajuste</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cantidad_tiempo_caso__c</fullName>
        <description>prueba cantidad tiempo duracion caso</description>
        <formula>ClosedDate - SlaExitDate</formula>
        <label>Cantidad tiempo caso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseNumberStatus__c</fullName>
        <formula>IF(ISPICKVAL(Status,&quot;New&quot;), CaseNumber  &amp; &quot; - &quot; &amp; &quot;Nueva&quot;,CaseNumber  &amp; &quot; - &quot; &amp;   TEXT( Status ))</formula>
        <label>CaseNumberStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sugerencias</fullName>
                </value>
                <value>
                    <fullName>Felicitaciones</fullName>
                </value>
                <value>
                    <fullName>Quejas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closing_Channel__c</fullName>
        <description>Case Closing channel</description>
        <label>Closing Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>App</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>Personalizado</fullName>
                </value>
                <value>
                    <fullName>Redes Sociales</fullName>
                </value>
                <value>
                    <fullName>Sat Push</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Telefónico</fullName>
                </value>
                <value>
                    <fullName>USSD</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactMotive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Motive</label>
        <referenceTo>Contact_Motive__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Channel__c</fullName>
        <description>campo para indicar el medio de contacto a elegido por el cliente para futuras comunicaciones</description>
        <label>Contact Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Telefono/celular</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedByMe__c</fullName>
        <description>FASE 3 - PFTA-4322 - Field created to indicate if the case was or not created by the user logged in Salesforce. It is used for filtering the views in CARE.</description>
        <formula>IF(($User.Id  =  CreatedById), true, false)</formula>
        <label>Created By Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creator_Team__c</fullName>
        <label>Equipo del Creador</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <label>Saldo Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeferredRepair__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deferred Repair</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeviceConfigSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the mobile device configuration was sent to the customer</description>
        <label>Configuracion de Equipo enviada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Case Due Date</description>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Sended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_resolution_date__c</fullName>
        <description>Estimated date and time to resolve the case. Tech care: PFTA-4282</description>
        <label>Estimated resolution date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExternalCaseId__c</fullName>
        <description>External Id for a masive incident.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id for a masive incident.</inlineHelpText>
        <label>External Case Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExternalCaseType__c</fullName>
        <label>External Case Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FechaDesde__c</fullName>
        <description>Este campo es necesario para guardar en el caso la fecha de inicio asociado al ajuste.</description>
        <label>FechaDesde</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FechaHasta__c</fullName>
        <description>Este campo es necesario para guardar en el caso la fecha de fin asociado al ajuste</description>
        <label>FechaHasta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Geolocation_Address__c</fullName>
        <description>PFTA-6083 - Tech care, Field used to store the geolocation of an address to handle the cases related with GEO in mobile.</description>
        <label>Geolocation of Address</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>Define el impacto para un determinado caso Alto , Medio , Bajo , Sin impacto</description>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bajo</fullName>
                </value>
                <value>
                    <fullName>Medio</fullName>
                </value>
                <value>
                    <fullName>Alto</fullName>
                </value>
                <value>
                    <fullName>Sin Impacto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IncidentDevice__c</fullName>
        <label>Tipo Dispositivo Afectado</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <description>Describe el incidente del caso por ejemplo Sin Acceso ,Lentitud, Errores en consultas y/o gestiones,Varios</description>
        <label>Incident</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SubType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sin Acceso</fullName>
                </value>
                <value>
                    <fullName>Lentitud</fullName>
                </value>
                <value>
                    <fullName>Errores en consultas y/o gestiones</fullName>
                </value>
                <value>
                    <fullName>Varios</fullName>
                </value>
                <value>
                    <fullName>Problemas de acceso</fullName>
                </value>
                <value>
                    <fullName>Faltante de datos</fullName>
                </value>
                <value>
                    <fullName>Andreani</fullName>
                </value>
                <value>
                    <fullName>Seprit</fullName>
                </value>
                <value>
                    <fullName>Inconvenientes con envio de informacion</fullName>
                </value>
                <value>
                    <fullName>Backend - Sin acceso</fullName>
                </value>
                <value>
                    <fullName>Backend - Lentitud </fullName>
                </value>
                <value>
                    <fullName>Backend - errores en consultas/ gestiones</fullName>
                </value>
                <value>
                    <fullName>Frontend - Sin acceso</fullName>
                </value>
                <value>
                    <fullName>Frontend - Lentitud </fullName>
                </value>
                <value>
                    <fullName>Frontend - errores en consultas/ gestiones</fullName>
                </value>
                <value>
                    <fullName>Canjes</fullName>
                </value>
                <value>
                    <fullName>Categorías</fullName>
                </value>
                <value>
                    <fullName>Puntos</fullName>
                </value>
                <value>
                    <fullName>Voz y Datos 2/3/4G</fullName>
                </value>
                <value>
                    <fullName>Voz y Datos 2/3G</fullName>
                </value>
                <value>
                    <fullName>Voz y Datos 2G</fullName>
                </value>
                <value>
                    <fullName>Voz y Datos 3G</fullName>
                </value>
                <value>
                    <fullName>Datos 4G</fullName>
                </value>
                <value>
                    <fullName>Datos 2G</fullName>
                </value>
                <value>
                    <fullName>Datos 3G</fullName>
                </value>
                <value>
                    <fullName>Voz 2G</fullName>
                </value>
                <value>
                    <fullName>Voz 3G</fullName>
                </value>
                <value>
                    <fullName>Voz 2/3G</fullName>
                </value>
                <value>
                    <fullName>Demoras en el impacto de comandos en el sistema de Gestion</fullName>
                </value>
                <value>
                    <fullName>Demoras en el impacto en la red (no se visualizan en HLR)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initiator_team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Store the workteam that raised a case.</description>
        <label>Initiator team</label>
        <referenceTo>WorkTeam__c</referenceTo>
        <relationshipLabel>Cases Initiated</relationshipLabel>
        <relationshipName>Initiated_cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>LineNumber</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LoteNumber__c</fullName>
        <description>Representa el numero de Lote de una tarjeta pre paga utilizada en una gestión de problemas con recargas ( según IDD S154 es un numero entre  2 a 12 digitos)</description>
        <label>LoteNumber</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSISDN__c</fullName>
        <formula>Asset.MSISDN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSISDN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarcaExcepcion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Este campo es necesario para guardar en el caso, si el ajuste es o no excepción el cual se usará posteriormente en el proceso de aprobación para determinar los montos mínimos</description>
        <label>MarcaExcepcion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modified_Date__c</fullName>
        <description>Fecha de Modificación del Caso</description>
        <label>Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Motivo__c</fullName>
        <description>En este campo se guardan los motivos asociados al proceso de ajuste requerido por Telecom</description>
        <label>Motivo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MuleTerminal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mule Terminal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fuera de Cobertura</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operation_Type__c</fullName>
        <description>Tipos de Operación disponibles para poder defiinir una gestión de Solicitud de Servicio Técnico.</description>
        <label>Operation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consulta</fullName>
                </value>
                <value>
                    <fullName>Configuración</fullName>
                </value>
                <value>
                    <fullName>Reparación</fullName>
                </value>
                <value>
                    <fullName>Presupuesto</fullName>
                </value>
                <value>
                    <fullName>Certificados</fullName>
                </value>
                <value>
                    <fullName>Ley Def. Cons.</fullName>
                </value>
                <value>
                    <fullName>Demos</fullName>
                </value>
                <value>
                    <fullName>Express</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                    <isActive>false</isActive>
                    <label>Demo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orden</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnedByMe__c</fullName>
        <description>FASE 3 - PFTA-4322 - Field created to indicate if the case is or not owned by the user logged in Salesforce. It is used for filtering the views in CARE.</description>
        <formula>IF(($User.Id =  OwnerId ), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owned By Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Store the team that is working in the case, it is updated each time that the case is resigned to handle the RAV.</description>
        <label>Owner Team</label>
        <referenceTo>WorkTeam__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Adjustment</label>
        <referenceTo>vlocity_cmt__PaymentAdjustment__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_type__c</fullName>
        <description>medio de pago para reintegros</description>
        <inlineHelpText>medio con el cual se realizó el pago</inlineHelpText>
        <label>Medio Pago</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PinNumber__c</fullName>
        <description>Representa el numero de  pin  de una tarjeta pre paga utilizada en una gestión de problemas con recargas (16 digitos)</description>
        <label>PinNumber</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Doc_No__c</fullName>
        <description>Document Number informed in the portability BDO request</description>
        <label>Port Doc No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Port_Doc_Type__c</fullName>
        <description>Portability Document Type informed in the BDO request</description>
        <label>Port Doc Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DocumentTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Port_Donor_Cod__c</fullName>
        <description>Donor company code to which the line to port belongs</description>
        <label>Port Donor Cod</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_FVC__c</fullName>
        <description>Change Window Date used for Port Out process</description>
        <label>Port FVC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Port_Line_Qty__c</fullName>
        <description>Quantity of lines that are part of the portability process</description>
        <label>Port Line Qty</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Port_Market__c</fullName>
        <description>Market to which the line to port belongs</description>
        <label>Port Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Port_Movement_Sub_Type__c</fullName>
        <description>Subtype of movement for Port Out integration for suspension and cancelation</description>
        <label>Port Movement Sub Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Movement_Type__c</fullName>
        <description>Type of movement informed by the Port Out suspension / cancelation process</description>
        <label>Port Movement Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_NRN__c</fullName>
        <description>Value for Network Routing Number used in Port Out process</description>
        <label>Port NRN</label>
        <length>6</length>
        <type>Text</type>
    </fields>
</CustomObject>